# gaggimate

./: .clang-format  .clangd  .editorconfig  .gitignore  .gitmodules  CNAME  CONTRIBUTING.md  README.md  package-lock.json  package.json  platformio.ini  tailwind.config.js
src/display/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.cpp  ui_events.h  ui_helpers.c  ui_helpers.h  ui_theme_manager.cpp  ui_theme_manager.h  ui_themes.cpp  ui_themes.h
src/display/ui/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_piebutton.c  ui_comp_piebutton.h
src/display/ui/default/: DefaultUI.cpp  DefaultUI.h
src/display/ui/default/lvgl/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.cpp  ui_events.h  (+6 more)
src/display/ui/images/: ui_img_1091371356.c  ui_img_1138440778.c  ui_img_1455708189.c  ui_img_1456692430.c  ui_img_1640786209.c  ui_img_1732953241.c  ui_img_1759772909.c  ui_img_1765671371.c  ui_img_1857452635.c  ui_img_1895594966.c  ui_img_2056842146.c  ui_img_2100879889.c  ui_img_2106667244.c  ui_img_295763949.c  ui_img_363557387.c  ui_img_364513079.c  ui_img_489054950.c  ui_img_545340440.c  ui_img_646127855.c  ui_img_753040508.c  ui_img_980971367.c  ui_img_bluetooth_png.c  ui_img_gaggimate_png.c  ui_img_indicator_png.c  ui_img_logo_png.c  ui_img_standby_png.c  ui_img_untitled_png.c  ui_img_wifi_png.c
src/display/ui/screens/: ui_BrewScreen.c  ui_GrindScreen.c  ui_InitScreen.c  ui_MenuScreen.c  ui_ProfileScreen.c  ui_StandbyScreen.c  ui_StatusScreen.c  ui_SteamScreen.c  ui_WaterScreen.c
src/display/ui/utils/: effects.h
(+421 files in other folders)
